name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/akira08280/euler#readme
license:             MIT
license-file:        LICENSE
author:              Akira Yano
maintainer:          akira.08280@gmail.com
copyright:           2017 Akira Yano
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/wiki.haskell.org
                     , src/lib
  exposed-modules:     Common
                     , MillerRabin
                     , SpecialSubset
                     , Euler103
  build-depends:       base >= 4.7 && < 5
                     , NumberTheory
                     , containers
                     , text
                     , primes
                     , array
                     , time
                     , regex-posix
                     , regex-compat
                     , MissingH
                     , arithmoi
                     , mtl
                     , fgl
                     , random
                     , digits
                     , split
                     , Unique
  default-language:    Haskell2010

test-suite euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , euler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akira08280/euler
